iOS safari image stretching from flexbox fix

--- a/src/Work/work.scss
+++ b/src/Work/work.scss
@@ -10,6 +10,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+     align-items: flex-start;
     // justify-content: space-evenly;
     height: 100vh;
     width: 100%;
